fixed alignment issue

--- a/pageBootstrap.css
+++ b/pageBootstrap.css
@@ -50,7 +50,7 @@
     bottom: 25%;
     left: 20%;
 }
-.title{
+.titleSlide{
     text-align: start;
     margin: 6px;
 }
